--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "forestry:preview": "gatsby develop -p 8080 -H 0.0.0.0",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
